Mon Oct 25 05:37:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_null_return_value.cpp:
          Reverted change below, this visitor seems to be used in multiple
          places, need to add a new one for attribute initialization

Sun Oct 24 11:34:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_null_return_value.cpp:
          Simplified member initialization

Sat Oct 23 11:54:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exs.cpp:
        * TAO_IDL/be/be_visitor_home/home_exs.cpp:
        * TAO_IDL/be_include/be_visitor_component/executor_exh.h:
        * TAO_IDL/be_include/be_visitor_component/executor_exs.h:
        * TAO_IDL/be_include/be_visitor_component/facet_exh.h:
        * TAO_IDL/be_include/be_visitor_component/facet_exs.h:
        * TAO_IDL/be_include/be_visitor_home/home_exs.h:
          Doxygen style of documentation generated

Sat Oct 23 10:29:26 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3919_Regression/Bug_3919_Regression.mpc:
        * tests/Bug_3919_Regression/Test2.idl:
        * tests/Bug_3919_Regression/client.cpp:
          Added test for nested use of recursive typecode from another
          IDL file (including the recursive type IDL file).

Sat Oct 23 000:25:53 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/facet_exs.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
        * TAO_IDL/be_include/be_visitor_component/executor_exh.h:

          More fixes in logic to support attribute impl generation
          in the executor.
